Fix inspection warnings